kubernetes/flower/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flower-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /flower
            pathType: "Prefix"
            backend:
              service:
                name: flower-service
                port:
                  number: 8085
